updated swagger base controller
