# storage/api-docs/api-docs.json
@@ -7,8 +7,12 @@
     },
     "servers": [
         {
-            "url": "https://taxly.test",
+            "url": "http://taxly.test",
             "description": "Local Server"
+        },
+        {
+            "url": "https://dev.taxly.ng",
+            "description": "Development Server"
         },
         {
             "url": "https://taxly.ng",
@@ -321,6 +325,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -363,6 +370,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -425,6 +435,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1039,6 +1052,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1588,6 +1604,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1665,6 +1684,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1707,6 +1729,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1764,6 +1789,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1830,6 +1858,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1876,6 +1907,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1908,6 +1942,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -1951,6 +1988,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -2085,6 +2125,9 @@
                 "security": [
                     {
                         "sanctum": []
+                    },
+                    {
+                        "ApiKeyAuth": []
                     }
                 ]
             }
@@ -2360,6 +2403,12 @@
                 "type": "apiKey",
                 "description": "Enter token in format (Bearer <token>)",
                 "name": "Authorization",
+                "in": "header"
+            },
+            "apiKey": {
+                "type": "apiKey",
+                "description": "API key for authentication",
+                "name": "X-API-KEY",
                 "in": "header"
             },
             "ApiKeyAuth": {
